--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_name: MyString
-  last_name: MyString
+  id: 1
+  first_name: Joe
+  last_name: Bob
   created_at: 2015-07-27 14:00:22
   updated_at: 2015-07-27 14:00:22
 
 two:
-  first_name: MyString
-  last_name: MyString
+  id: 2
+  first_name: Jill
+  last_name: Jane
   created_at: 2015-07-27 14:00:22
   updated_at: 2015-07-27 14:00:22
