--- a/test/fixtures/invoice_items.yml
+++ b/test/fixtures/invoice_items.yml
@@ -1,17 +1,28 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   item_id: 1
   invoice_id: 1
-  quantity: 1
-  unit_price: 1
+  quantity: 3
+  unit_price: 100
   created_at: 2015-07-27 14:09:03
   updated_at: 2015-07-27 14:09:03
 
 two:
-  item_id: 1
-  invoice_id: 1
+  id: 2
+  item_id: 2
+  invoice_id: 2
+  quantity: 5
+  unit_price: 200
+  created_at: 2015-07-27 14:09:03
+  updated_at: 2015-07-27 14:09:03
+
+three:
+  id: 3
+  item_id: 3
+  invoice_id: 3
   quantity: 1
-  unit_price: 1
+  unit_price: 200
   created_at: 2015-07-27 14:09:03
   updated_at: 2015-07-27 14:09:03
