--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -1,15 +1,25 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   customer_id: 1
   merchant_id: 1
-  status: MyString
+  status: shipped
   created_at: 2015-07-27 14:06:40
   updated_at: 2015-07-27 14:06:40
 
 two:
+  id: 2
+  customer_id: 2
+  merchant_id: 2
+  status: shipped
+  created_at: 2015-07-27 14:06:40
+  updated_at: 2015-07-27 14:06:40
+
+three:
+  id: 3
   customer_id: 1
-  merchant_id: 1
-  status: MyString
+  merchant_id: 3
+  status: shipped
   created_at: 2015-07-27 14:06:40
   updated_at: 2015-07-27 14:06:40
