--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,17 +1,29 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyString
-  unit_price: 1
+  id: 1
+  name: Black Hat
+  description: It's not blue
+  unit_price: 100
   merchant_id: 1
   created_at: 2015-07-27 14:09:37
   updated_at: 2015-07-27 14:09:37
 
 two:
-  name: MyString
-  description: MyString
-  unit_price: 1
-  merchant_id: 1
+  id: 2
+  name: Blue Shirt
+  description: It's not black
+  unit_price: 200
+  merchant_id: 2
   created_at: 2015-07-27 14:09:37
   updated_at: 2015-07-27 14:09:37
+
+three:
+  id: 3
+  name: Silver Spoon
+  description: It's super silver
+  unit_price: 500
+  merchant_id: 3
+  created_at: 2015-07-27 14:09:37
+  updated_at: 2015-07-27 14:09:37
+
